[EagerAppCDS] add export in CDSDumperHelper.java
Summary: as title

Test Plan: ci jtreg cds+quickstart

Reviewed-by: lingjun-cg, yuleil