@@ -51,6 +51,7 @@ public class CDSDumperHelper {
                 "-cp",
                 Path.of(jdkHome, "lib", QuickStart.getServerlessAdapter()).toString(),
                 "--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED",
+                "--add-exports=java.base/jdk.internal.access=ALL-UNNAMED",
                 cdsDumper,                                              // invoke CDSDumper
                 QuickStart.cachePath(),                                 // arg[0]: String dirPath
                 info.originClassListName,                               // arg[1]: String originClassListName
